<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_art_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="arthike@todo.todo">arthike</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>OpenCV</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>action_msgs</depend>
  
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>rosidl_default_runtime</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>